@@ -1,5 +1,8 @@
 package br.com.fiap.energenius.consumptionAccount;
 
+import br.com.fiap.energenius.auth.SecurityConfig;
+import br.com.fiap.energenius.user.User;
+import br.com.fiap.energenius.user.UserRepository;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -8,7 +11,6 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 public class ConsumptionAccountController {
@@ -16,11 +18,15 @@ public class ConsumptionAccountController {
     private final ConsumptionAccountService consumptionAccountService;
     private final RabbitTemplate rabbitTemplate;
     private final ConsumptionAccountRepository consumptionAccountRepository;
+    private final SecurityConfig securityConfig;
+    private final UserRepository userRepository;
 
-    public ConsumptionAccountController(ConsumptionAccountService consumptionAccountService, RabbitTemplate rabbitTemplate, ConsumptionAccountRepository consumptionAccountRepository) {
+    public ConsumptionAccountController(ConsumptionAccountService consumptionAccountService, RabbitTemplate rabbitTemplate, ConsumptionAccountRepository consumptionAccountRepository, SecurityConfig securityConfig, UserRepository userRepository) {
         this.consumptionAccountService = consumptionAccountService;
         this.rabbitTemplate = rabbitTemplate;
         this.consumptionAccountRepository = consumptionAccountRepository;
+        this.securityConfig = securityConfig;
+        this.userRepository = userRepository;
     }
 
     @GetMapping("/energy-data-form")
@@ -29,33 +35,41 @@ public class ConsumptionAccountController {
     }
 
     @GetMapping("/")
-    public String showDashboard(Model model) {
-        List<ConsumptionAccount> data = consumptionAccountRepository.findAll();
+    public String getConsumptionData(Model model) {
+        // Obtém o e-mail do usuário logado
+        String loggedUserEmail = securityConfig.getLoggedInUserEmail();
 
-        // Preparar listas para Thymeleaf
-        List<String> labels = data.stream()
+        User user = userRepository.findByEmail(loggedUserEmail)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        // Busca os dados no banco de dados para o usuário logado
+        List<ConsumptionAccount> consumptionAccounts = consumptionAccountRepository.findByEmail(user);
+
+        // Extrai os dados para gráficos
+        List<String> labels = consumptionAccounts.stream()
                 .map(ConsumptionAccount::getMonthYearBill)
-                .collect(Collectors.toList());
-        List<Float> consumptionData = data.stream()
+                .toList();
+        List<Float> consumptionData = consumptionAccounts.stream()
                 .map(ConsumptionAccount::getEnergyConsumption)
-                .collect(Collectors.toList());
-        List<Float> costData = data.stream()
+                .toList();
+        List<Float> costData = consumptionAccounts.stream()
                 .map(ConsumptionAccount::getBillCost)
-                .collect(Collectors.toList());
+                .toList();
 
-        model.addAttribute("pageTitle", "Energy Consumption Dashboard");
+        // Adiciona os dados ao modelo para renderização na página
         model.addAttribute("labels", labels);
         model.addAttribute("consumptionData", consumptionData);
         model.addAttribute("costData", costData);
+        model.addAttribute("pageTitle", "Energy Consumption Dashboard");
 
-        return "index"; // Nome do arquivo HTML
+        return "index";
     }
 
     @PostMapping("/save-energy-data")
     public String sendData(@ModelAttribute ConsumptionAccount c) {
         System.out.println(c);
         consumptionAccountService.sendData(c);
-        rabbitTemplate.convertAndSend("email-queue", "Nova tarefa cadastrada: " + c.costumerEmail);
+        rabbitTemplate.convertAndSend("email-queue", "Nova tarefa cadastrada: " + c.email);
         return "redirect:/";
     }
 
